--- a/app/src/main/res/layout/activity_live_order_status.xml
+++ b/app/src/main/res/layout/activity_live_order_status.xml
@@ -56,8 +56,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/blackColor"
             android:fontFamily="@font/comfortaa_bold"
-            android:text="Order has been placed"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
     </LinearLayout>
 
     <LinearLayout
