--- a/app/src/main/res/layout/storeproducts.xml
+++ b/app/src/main/res/layout/storeproducts.xml
@@ -85,7 +85,7 @@
             android:layout_width="80dp"
             android:layout_height="25dp"
             android:layout_gravity="top"
-            android:background="@drawable/btn_increase"
+            android:background="@drawable/btn_search_border"
             android:textColor="@color/blackColor"
             android:visibility="gone"
             android:textStyle="bold"
@@ -95,12 +95,12 @@
             android:layout_width="80dp"
             android:layout_height="30dp"
             android:textAllCaps="false"
-            android:textColor="@color/blackColor"
+            android:textColor="@color/greenColor"
             android:background="@drawable/btn_search_border"
             android:drawableRight="@drawable/add_btn"
             android:drawablePadding="2dp"
-            android:fontFamily="@font/comfortaa_bold"
             android:visibility="visible"
+            android:paddingVertical="5dp"
             android:text="Add" />
         <TextView
             android:id="@+id/thisProdCountTV"
@@ -109,14 +109,17 @@
             android:paddingVertical="8dp"
             android:layout_weight="0.3"
             android:visibility="gone"
+            android:padding="10dp"
+            android:background="@color/greenColor"
             android:layout_gravity="center"
+            android:textColor="@color/whiteColor"
             android:gravity="center"
             android:text="1"/>
         <Button
             android:id="@+id/removeOneProdB"
             android:layout_width="80dp"
             android:layout_height="25dp"
-            android:background="@drawable/btn_decrease"
+            android:background="@drawable/btn_search_border"
             android:textColor="@color/blackColor"
             android:visibility="gone"
             android:textStyle="bold"
