--- a/app/src/main/res/drawable/background_loginpage.xml
+++ b/app/src/main/res/drawable/background_loginpage.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="20dp" />
-    <stroke android:width="3px" android:color="#000000" />
-    <solid android:color="@color/whiteColor" />
+    <solid android:color="@color/whiteColor"/>
+
+    <corners
+       android:topLeftRadius="35dp"
+        android:topRightRadius="35dp"/>
 
 </shape>
