--- a/app/src/main/res/drawable/btn_search_border.xml
+++ b/app/src/main/res/drawable/btn_search_border.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="#F8F8FF"
-        android:endColor="#F8F8FF"
+    <gradient android:startColor="#ffffff"
+        android:endColor="#ffffff"
         android:angle="270" />
-    <corners android:radius="20dp" />
-    <stroke android:width="3px" android:color="#000000" />
+    <corners android:radius="5dp" />
+    <stroke android:width="4px" android:color="#1fb141" />
 
 </shape>
