--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -18,7 +18,8 @@
         <ImageView
             android:id="@+id/storeImgStorePageIV"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="190dp"
+            android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
+        android:background="@color/whiteColor"
         android:layout_below="@+id/storeImgStorePageIVRL"
         >
 
