--- a/app/src/main/res/layout/addressbook.xml
+++ b/app/src/main/res/layout/addressbook.xml
@@ -1,44 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/allside_border"
+    app:cardElevation="1dp"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="10dp"
+    android:background="@color/whiteColor"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="20dp">
+    >
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         app:layout_constraintTop_toTopOf="parent">
         <TextView
             android:id="@+id/tagAddressTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:fontFamily="@font/comfortaa_bold"
+            android:layout_marginTop="5dp"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/completeAddressTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/comfortaa_bold"
+            android:layout_marginTop="5dp"
             android:gravity="center"/>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal">
             <Button
                 android:id="@+id/editAddressB"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_height="wrap_content"
-                android:text="edit"/>
+                android:layout_width="150dp"
+                android:layout_height="35dp"
+                android:background="@drawable/allside_border"
+                android:text="Edit"
+                android:textAllCaps="false"
+                android:fontFamily="@font/comfortaa_bold"
+                android:textColor="@color/blackColor"/>
             <Button
                 android:id="@+id/deleteAddressB"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_height="wrap_content"
-                android:text="delete"/>
+                android:layout_width="150dp"
+                android:layout_height="35dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/allside_border"
+                android:text="Delete"
+                android:textAllCaps="false"
+                android:fontFamily="@font/comfortaa_bold"
+                android:textColor="@color/blackColor"/>
         </LinearLayout>
     </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
