--- a/app/src/main/res/layout/storeproductcategories.xml
+++ b/app/src/main/res/layout/storeproductcategories.xml
@@ -9,16 +9,13 @@
         android:id="@+id/storeProductCategoryB"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
+       android:layout_marginLeft="10dp"
+        android:paddingHorizontal="5dp"
         android:background="@drawable/gradient_button"
-        android:fontFamily="@font/comfortaa_bold"
         android:textAllCaps="false"
         android:textStyle="bold"
-        android:paddingHorizontal="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
