--- a/app/src/main/res/layout/activity_phone_verification.xml
+++ b/app/src/main/res/layout/activity_phone_verification.xml
@@ -6,14 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".phoneVerification">
 
+    <TextView
+        android:id="@+id/verifyPhoneTextTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.3"
+        android:textSize="28dp"
+        android:textColor="@color/blackColor"
+        android:text="Verify Phone"/>
+
     <LinearLayout
         android:id="@+id/otpInputAndProceedLL"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.4">
+        app:layout_constraintTop_toBottomOf="@id/verifyPhoneTextTV"
+        android:layout_marginTop="15dp">
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
