--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -26,7 +26,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp">
-
+                <RadioButton
+                    android:id="@+id/payAtStoreRB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pay at store"/>
             </RadioGroup>
 
         </android.support.constraint.ConstraintLayout>
